Added multiple files regarding MallMate